issue persists in cartpole also

--- a/rllib/tuned_examples/appo/pong-appo.yaml
+++ b/rllib/tuned_examples/appo/pong-appo.yaml
@@ -3,11 +3,12 @@
 # similar configurations, solved Pong in 10-12 minutes.
 # APPO can also solve Pong in 2.5 million timesteps, which is
 # 2x more efficient than that of IMPALA.
-pong-appo-extra-logging:
-    env: PongNoFrameskip-v4
+cartpole-appo:
+    # env: PongNoFrameskip-v4
+    env: CartPole-v1
     run: APPO
     stop:
-        episode_reward_mean: 18.0
+        # episode_reward_mean: 18.0
         # timesteps_total: 5000000
     config:
         # Works for both torch and tf.
@@ -15,8 +16,8 @@ pong-appo-extra-logging:
         vtrace: True
         use_kl_loss: False
         rollout_fragment_length: 50
-        train_batch_size: 750
-        num_workers: 32
+        train_batch_size: 800
+        num_workers: 22
         broadcast_interval: 1
         max_sample_requests_in_flight_per_worker: 2
         num_multi_gpu_tower_stacks: 1
@@ -25,11 +26,13 @@ pong-appo-extra-logging:
         num_sgd_iter: 2
         vf_loss_coeff: 1.0
         clip_param: 0.3
-        num_gpus: 1
+        num_gpus:
+            grid_search:
+                - 0.5
         grad_clip: 10
         model:
           dim: 42
         _disable_execution_plan_api:
             grid_search:
                 - True
-                # - False
+                - False
