--- a/doc/source/ray-air/examples/BUILD
+++ b/doc/source/ray-air/examples/BUILD
@@ -30,14 +30,14 @@ py_test_run_all_notebooks(
     size = "large",
     include = ["*.ipynb"],
     exclude = [
-        "huggingface_text_classification.ipynb",
-        "torch_incremental_learning.ipynb",
-        "feast_example.ipynb",  # REGRESSION
-        "rl_offline_example.ipynb",  # REGRESSION
-        "rl_online_example.ipynb",  # REGRESSION
-        "convert_existing_pytorch_code_to_ray_air.ipynb", # REGRESSION
-        "tfx_tabular_train_to_serve.ipynb", # REGRESSION
-        "torch_image_example.ipynb", # REGRESSION
+        # "huggingface_text_classification.ipynb",
+        # "torch_incremental_learning.ipynb",
+        # "feast_example.ipynb",  # REGRESSION
+        # "rl_offline_example.ipynb",  # REGRESSION
+        # "rl_online_example.ipynb",  # REGRESSION
+        # "convert_existing_pytorch_code_to_ray_air.ipynb", # REGRESSION
+        # "tfx_tabular_train_to_serve.ipynb", # REGRESSION
+        # "torch_image_example.ipynb", # REGRESSION
     ],
     data = ["//doc/source/ray-air/examples:air_examples"],
     tags = ["exclusive", "team:ml", "ray_air"],
@@ -50,8 +50,8 @@ py_test_run_all_notebooks(
     size = "large",
     include = [],
     exclude = [
-        "huggingface_text_classification.ipynb", # REGRESSION!
-        "torch_incremental_learning.ipynb" # REGRESSION!
+        # "huggingface_text_classification.ipynb", # REGRESSION!
+        # "torch_incremental_learning.ipynb" # REGRESSION!
     ],
     data = ["//doc/source/ray-air/examples:air_examples"],
     tags = ["exclusive", "team:ml", "gpu", "ray_air"],
