--- a/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
@@ -10,12 +10,13 @@ cartpole-crashing-pg:
 
         env_config:
             config:
-                # Crash roughly every 300 ts. This should be ok to measure 150.0
+                # Crash roughly every 300 ts. This should be ok to measure 180.0
                 # reward (episodes are 200 ts long).
-                p_crash: 0.0025
+                p_crash: 0.0025  # prob to crash during step()
+                p_crash_reset: 0.01  # prob to crash during reset()
                 # Time for the env to initialize when newly created.
                 # Every time a remote sub-environment crashes, a new env is created
-                # instead that will take this long (sleep) to "initialize".
+                # in its place and will take this long (sleep) to "initialize".
                 init_time_s: 1.0
         horizon: 200
         num_workers: 2
