--- a/.buildkite/pipeline.gpu.yml
+++ b/.buildkite/pipeline.gpu.yml
@@ -21,7 +21,7 @@
       --test_tag_filters=gpu --test_env=RAY_USE_MULTIPROCESSING_CPU_COUNT=1 --test_env=RLLIB_NUM_GPUS=1 rllib/...
 
 
-- label: ":tv: serverless: Serve Tests"
+- label: ":tv: :serverless: Serve Tests"
   parallelism: 3
   conditions:
     [
