--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -340,7 +340,7 @@ py_test(
 )
 
 py_test(
-    name = "test_air_integrations",
+    name = "test_air_integrations_gpu",
     size = "medium",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve", "gpu"],
