Don't measure actor creation time
Signed-off-by: Kai Fricke <kai@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -282,6 +282,8 @@
   team: ml
   env: staging
 
+  stable: false
+
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: compute_cpu_4.yaml
