--- a/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
+++ b/rllib/tuned_examples/pg/cartpole-crashing-pg.yaml
@@ -24,6 +24,8 @@ cartpole-crashing-pg:
         # Switch on resiliency for failed sub environments (within a vectorized stack).
         restart_failed_sub_environments: true
 
+        disable_env_checking: true
+
         evaluation_num_workers: 2
         evaluation_interval: 1
         evaluation_duration: 20
