--- a/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
+++ b/rllib/tuned_examples/pg/multi-agent-cartpole-crashing-with-remote-envs-pg.yaml
@@ -28,6 +28,9 @@ multi-agent-cartpole-crashing-pg:
         # Switch on resiliency for failed sub environments (within a vectorized stack).
         restart_failed_sub_environments: true
 
+        # Disable env checking. Otherwise, RolloutWorkers will crash during
+        # initialization, which is not covered by the
+        # `restart_failed_sub_environments=True` failure tolerance mode.
         disable_env_checking: true
 
         evaluation_num_workers: 1
