[air/benchmarks] Add 4x1 GPU benchmark for Torch
Signed-off-by: Kai Fricke <kai@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -178,6 +178,31 @@
 
   alert: default
 
+- name: air_benchmark_torch_mnist_gpu_4x1
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_cpu_4.yaml
+
+  run:
+    timeout: 3600
+    script: python workloads/torch_benchmark.py run --num-runs 3 --num-epochs 20 --num-workers 4 --cpus-per-worker 4 --use-gpu
+
+    wait_for_nodes:
+      # CPU head node + 4 GPU worker nodes
+      num_nodes: 5
+
+    type: sdk_command
+    file_manager: job
+
+  alert: default
+
 
 - name: air_benchmark_torch_mnist_cpu_1x4
   group: AIR tests
