--- a/.buildkite/pipeline.windows.yml
+++ b/.buildkite/pipeline.windows.yml
@@ -33,10 +33,10 @@ steps:
     - conda init
     - . ./ci/ci.sh init
     - . ./ci/ci.sh build
-    # - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then . ./ci/ci.sh test_core; fi
+    - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then . ./ci/ci.sh test_core; fi
     # - echo $?
     # The next command will be sharded into $parallelism shards.
-    - . ./ci/ci.sh test_core
+    # - . ./ci/ci.sh test_python
 
 - label: ":windows: Wheels"
   commands:
