--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -22,6 +22,7 @@ parts:
         - file: ray-air/predictors
         - file: ray-air/examples/serving_guide
         - file: ray-air/deployment
+        - file: ray-air/report-metrics-and-save-checkpoints
     - file: ray-air/examples/index
       sections:
         - file: ray-air/examples/torch_image_example
