--- a/.buildkite/pipeline.windows.yml
+++ b/.buildkite/pipeline.windows.yml
@@ -35,7 +35,7 @@ steps:
     - . ./ci/ci.sh build
     - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then . ./ci/ci.sh test_core; fi
     # The next command will be sharded into $parallelism shards.
-    - . ./ci/ci.sh test_python
+    # - . ./ci/ci.sh test_python
 
 - label: ":windows: Wheels"
   commands:
