--- a/.buildkite/pipeline.windows.yml
+++ b/.buildkite/pipeline.windows.yml
@@ -34,6 +34,7 @@ steps:
     - . ./ci/ci.sh init
     - . ./ci/ci.sh build
     - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then . ./ci/ci.sh test_core; fi
+    - echo "hello"
     # The next command will be sharded into $parallelism shards.
     # - . ./ci/ci.sh test_python
 
