nvm make ope test large again
Signed-off-by: rapotdar <rapotdar@anyscale.com>

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1671,7 +1671,7 @@ py_test(
 py_test(
     name = "test_ope",
     tags = ["team:rllib", "offline", "torch_only", "gpu"],
-    size = "medium",
+    size = "large",
     srcs = ["offline/estimators/tests/test_ope.py"]
 )
 
