--- a/release/rllib_tests/learning_tests/yaml_files/f-z/marwil-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/f-z/marwil-halfcheetahbulletenv-v0.yaml
@@ -25,5 +25,5 @@ marwil-halfcheetahbulletenv-v0:
         evaluation_interval: 3
         evaluation_config:
             input: sampler
-            off_policy_estimation_methods:
+            off_policy_estimation_methods: null
         always_attach_evaluation_results: True
