--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2807,6 +2807,35 @@
       wait_for_nodes:
         num_nodes: 5
 
+- name: stress_test_state_api_synthetic
+  group: core-daily-test
+  working_dir: nightly_tests
+  legacy:
+    test_name: stress_test_state_api_synthetic
+    test_suite: nightly_tests
+
+  frequency: nightly
+  team: core
+  cluster:
+    cluster_env: stress_tests/stress_tests_app_config.yaml
+    cluster_compute: stress_tests/stress_tests_compute.yaml
+
+  run:
+    timeout: 7200
+    script: python stress_tests/test_state_api_scale.py
+    type: sdk_command
+    file_manager: sdk
+
+  smoke_test:
+    frequency: multi
+    cluster:
+      app_config: stress_tests/stress_tests_app_config.yaml
+      cluster_compute: stress_tests/smoke_test_compute.yaml
+
+    run:
+      timeout: 3600
+      script: python stress_tests/test_many_tasks.py --smoke-test
+
 - name: stress_test_many_tasks
   group: core-daily-test
   working_dir: nightly_tests
