--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -20,6 +20,7 @@ parts:
         - file: ray-air/examples/analyze_tuning_results
         - file: ray-air/examples/upload_to_comet_ml
         - file: ray-air/examples/upload_to_wandb
+        - file: ray-air/predictors
         - file: ray-air/examples/serving_guide
         - file: ray-air/deployment
         - file: ray-air/use-pretrained-model
