[air] Add initial benchmark section (#26608)

--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -24,6 +24,7 @@ parts:
         - file: ray-air/deployment
         - file: ray-air/use-pretrained-model
         - file: ray-air/report-metrics-and-save-checkpoints
+        - file: ray-air/benchmarks
     - file: ray-air/examples/index
       sections:
         - file: ray-air/examples/torch_image_example
