--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -250,6 +250,8 @@ parts:
       - file: cluster/user-guide
       - file: cluster/cloud
       - file: cluster/kuberay
+        sections:
+          - file:
       - file: cluster/deploy
       - file: cluster/api
       - file: cluster/usage-stats
