--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -251,7 +251,12 @@ parts:
       - file: cluster/cloud
       - file: cluster/kuberay
         sections:
-          - file:
+          - file: cluster/kuberay/quickstart.md
+          - file: cluster/kuberay/config.md
+          - file: cluster/kuberay/logging.md
+          - file: cluster/kuberay/ml-example.md
+          - file: cluster/kuberay/networking.md
+          - file: cluster/kuberay/gpu.md
       - file: cluster/deploy
       - file: cluster/api
       - file: cluster/usage-stats
