--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -251,12 +251,14 @@ parts:
       - file: cluster/cloud
       - file: cluster/kuberay
         sections:
-          - file: cluster/kuberay/quickstart.md
-          - file: cluster/kuberay/config.md
-          - file: cluster/kuberay/logging.md
-          - file: cluster/kuberay/ml-example.md
-          - file: cluster/kuberay/networking.md
-          - file: cluster/kuberay/gpu.md
+          - file: cluster/kuberay/quickstart
+          - file: cluster/kuberay/config
+          - file: cluster/kuberay/k8s-cluster-setup
+          - file: cluster/kuberay/logging
+          - file: cluster/kuberay/networking
+          - file: cluster/kuberay/gpu
+          - file: cluster/kuberay/ml-example
+          - file: cluster/kuberay/kuberay-vs-legacy
       - file: cluster/deploy
       - file: cluster/api
       - file: cluster/usage-stats
