--- a/.buildkite/pipeline.windows.yml
+++ b/.buildkite/pipeline.windows.yml
@@ -33,7 +33,7 @@ steps:
     - conda init
     - . ./ci/ci.sh init
     - . ./ci/ci.sh build
-    - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then . ./ci/ci.sh test_core; fi
+    - if [ "${BUILDKITE_PARALLEL_JOB}" = "0" ]; then ./ci/ci.sh test_core; fi
     # The next command will be sharded into $parallelism shards.
     - . ./ci/ci.sh test_python
 
