add silver benchmarks

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -257,7 +257,7 @@
   alert: default
 
 
-- name: air_benchmark_torch_batch_prediction_gpu_1x1
+- name: air_benchmark_torch_batch_prediction_gpu_1x1_20gb
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
@@ -272,6 +272,28 @@
   run:
     timeout: 3600
     script: python workloads/gpu_batch_prediction.py --data-size-gb 20
+
+    type: sdk_command
+    file_manager: job
+
+  alert: default
+
+
+- name: air_benchmark_torch_batch_prediction_gpu_4x4_100gb
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_gpu_16.yaml
+
+  run:
+    timeout: 3600
+    script: python workloads/gpu_batch_prediction.py --data-size-gb 100
 
     type: sdk_command
     file_manager: job
@@ -379,7 +401,7 @@
   alert: default
 
 
-- name: air_benchmark_pytorch_training_e2e_gpu_1x1
+- name: air_benchmark_pytorch_training_e2e_gpu_1x1_20gb
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
@@ -394,6 +416,28 @@
   run:
     timeout: 3600
     script: python workloads/pytorch_training_e2e.py --data-size-gb 20
+
+    type: sdk_command
+    file_manager: job
+
+  alert: default
+
+
+- name: air_benchmark_pytorch_training_e2e_gpu_4x4_100gb
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_gpu_16.yaml
+
+  run:
+    timeout: 3600
+    script: python workloads/pytorch_training_e2e.py --data-size-gb=100 --num-workers=16
 
     type: sdk_command
     file_manager: job
