--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2513,6 +2513,33 @@
 
   alert: default
 
+- name: long_running_rllib_node_failure_tolerance
+  group: Long running tests
+  working_dir: long_running_distributed_tests
+
+  legacy:
+    test_name: long_running_rllib_node_failure_tolerance
+    test_suite: long_running_distributed
+
+  frequency: nightly
+  team: ml
+  env: staging
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: tpl_cpu_3.yaml
+
+  run:
+    timeout: 5400
+    script: python workloads/test_node_failure_tolerance.py
+    long_running: true
+    wait_for_nodes:
+      num_nodes: 3
+
+    type: sdk_command
+    file_manager: sdk
+
+  alert: default
+
 ########################
 # Core Nightly Tests
 ########################
