--- a/release/air_tests/air_benchmarks/compute_gpu_16.yaml
+++ b/release/air_tests/air_benchmarks/compute_gpu_16.yaml
@@ -13,3 +13,17 @@ worker_node_types:
       max_workers: 3
       min_workers: 3
       use_spot: false
+
+aws:
+    BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeSize: 800
+            Iops: 5000
+            Throughput: 1000
+            VolumeSize: 1000
+            VolumeType: gp3
+
+    IamInstanceProfile:
+        # Arn: arn:aws:iam::959243851260:instance-profile/ray-autoscaler-v1
+        Arn: arn:aws:iam::188439194153:instance-profile/ray-autoscaler-v1
