--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -304,7 +304,7 @@
   alert: default
 
 
-- name: air_benchmark_tune_mnist
+- name: air_benchmark_tune_torch_mnist
   group: AIR tests
   working_dir: air_tests/air_benchmarks
 
@@ -318,7 +318,7 @@
 
   run:
     timeout: 3600
-    script: python workloads/tune_benchmark.py
+    script: python workloads/tune_benchmark.py --num-trials 8 --num-workers 4
 
     wait_for_nodes:
       num_nodes: 8
@@ -328,6 +328,29 @@
 
   alert: default
 
+- name: air_benchmark_tune_torch_mnist_gpu
+  group: AIR tests
+  working_dir: air_tests/air_benchmarks
+
+  frequency: nightly
+  team: ml
+  env: staging
+
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: compute_gpu_4_g4_12xl.yaml
+
+  run:
+    timeout: 3600
+    script: python workloads/tune_benchmark.py --num-trials 4 --num-workers 4 --use-gpu
+
+    wait_for_nodes:
+      num_nodes: 8
+
+    type: sdk_command
+    file_manager: job
+
+  alert: default
 
 
 # Ray AIR distributed Tensorflow benchmarks
