--- a/rllib/tuned_examples/compact-regression-test.yaml
+++ b/rllib/tuned_examples/compact-regression-test.yaml
@@ -92,7 +92,7 @@ apex:
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
           prioritized_replay_alpha: 0.5
-          capacity: 1000000
+          capacity_ts: 1000000
         num_gpus: 1
         num_workers: 8
         num_envs_per_worker: 8
@@ -130,7 +130,7 @@ atari-basic-dqn:
         replay_buffer_config:
           type: MultiAgentReplayBuffer
           learning_starts: 20000
-          capacity: 1000000
+          capacity_ts: 1000000
         n_step: 1
         target_network_update_freq: 8000
         lr: .0000625
