--- a/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/halfcheetah-ddpg.yaml
@@ -32,7 +32,7 @@ halfcheetah-ddpg:
         # === Replay buffer ===
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          capacity: 10000
+          capacity_ts: 10000
           prioritized_replay_alpha: 0.6
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
