--- a/rllib/tuned_examples/ddpg/halfcheetah-pybullet-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/halfcheetah-pybullet-ddpg.yaml
@@ -24,7 +24,7 @@ ddpg-halfcheetahbulletenv-v0:
         tau: 0.001
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          capacity: 15000
+          capacity_ts: 15000
           prioritized_replay_alpha: 0.6
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
