--- a/rllib/tuned_examples/ddpg/hopper-pybullet-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/hopper-pybullet-ddpg.yaml
@@ -27,7 +27,7 @@ ddpg-hopperbulletenv-v0:
         tau: 0.001
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          capacity: 10000
+          capacity_ts: 10000
           prioritized_replay_alpha: 0.6
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
