--- a/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
+++ b/rllib/tuned_examples/ddpg/mountaincarcontinuous-ddpg.yaml
@@ -33,7 +33,7 @@ mountaincarcontinuous-ddpg:
         # === Replay buffer ===
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          capacity: 50000
+          capacity_ts: 50000
           prioritized_replay_alpha: 0.6
           prioritized_replay_beta: 0.4
           prioritized_replay_eps: 0.000001
