--- a/rllib/tuned_examples/ddpg/pendulum-ddpg-fake-gpus.yaml
+++ b/rllib/tuned_examples/ddpg/pendulum-ddpg-fake-gpus.yaml
@@ -18,7 +18,7 @@ pendulum-ddpg-fake-gpus:
         min_sample_timesteps_per_iteration: 600
         replay_buffer_config:
           type: MultiAgentPrioritizedReplayBuffer
-          capacity: 10000
+          capacity_ts: 10000
           worker_side_prioritization: false
           learning_starts: 500
         clip_rewards: false
