--- a/rllib/tuned_examples/dqn/atari-dist-dqn.yaml
+++ b/rllib/tuned_examples/dqn/atari-dist-dqn.yaml
@@ -13,7 +13,7 @@ atari-dist-dqn:
         noisy: false
         replay_buffer_config:
           type: MultiAgentReplayBuffer
-          capacity: 1000000
+          capacity_ts: 1000000
           learning_starts: 20000
         n_step: 1
         target_network_update_freq: 8000
