--- a/rllib/tuned_examples/dqn/memory-leak-test-dqn.yaml
+++ b/rllib/tuned_examples/dqn/memory-leak-test-dqn.yaml
@@ -10,4 +10,4 @@ memory-leak-test-dqn:
             config:
                 static_samples: true
         replay_buffer_config:
-          capacity: 500  # use small buffer to catch memory leaks
+          capacity_ts: 500  # use small buffer to catch memory leaks
