--- a/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq.yaml
+++ b/rllib/tuned_examples/slateq/interest-evolution-10-candidates-recsim-env-slateq.yaml
@@ -30,7 +30,7 @@ interest-evolution-recsim-env-slateq:
             epsilon_timesteps: 25000
 
         replay_buffer_config:
-            capacity: 100000
+            capacity_ts: 100000
 
         lr: 0.001
 
