--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -30,14 +30,14 @@ py_test_module_list(
     "test_advanced.py",
     "test_advanced_2.py",
     "test_advanced_3.py",
-    "test_advanced_4.py",
+    # "test_advanced_4.py",
     "test_advanced_5.py",
     "test_advanced_6.py",
     "test_advanced_7.py",
     "test_advanced_8.py",
     "test_advanced_9.py",
     "test_array.py",
-    "test_autoscaling_policy.py",
+    # "test_autoscaling_policy.py",
     "test_basic.py",
     "test_basic_2.py",
     "test_basic_4.py",
@@ -47,6 +47,7 @@ py_test_module_list(
     "test_gcs_utils.py",
     "test_generators.py",
     "test_metrics_agent.py",
+    # "test_metrics_agent.py",
     "test_component_failures_2.py",
     "test_component_failures_3.py",
     "test_error_ray_not_initialized.py",
@@ -61,7 +62,10 @@ py_test_module_list(
     "test_healthcheck.py",
     "test_kill_raylet_signal_log.py",
     "test_memstat.py",
-    "test_protobuf_compatibility.py"
+    "test_protobuf_compatibility.py",
+    # "test_kill_raylet_signal_log.py",
+    # "test_memstat.py",
+    # "test_mldataset.py",
   ],
   size = "medium",
   extra_srcs = SRCS,
@@ -86,10 +90,10 @@ py_test_module_list(
     "test_client_compat.py",
     "test_client_init.py",
     "test_client_multi.py",
-    "test_client_proxy.py",
+    # "test_client_proxy.py",
     "test_client_references.py",
     "test_client_warnings.py",
-    "test_client_library_integration.py",
+    # "test_client_library_integration.py",
   ],
   size = "medium",
   extra_srcs = SRCS,
@@ -156,14 +160,14 @@ py_test_module_list(
     "test_asyncio.py",
     "test_concurrency_group.py",
     "test_component_failures.py",
-    "test_debug_tools.py",
+    # "test_debug_tools.py",
     "test_distributed_sort.py",
     "test_microbenchmarks.py",
     "test_mini.py",
     "test_node_manager.py",
     "test_numba.py",
     "test_queue.py",
-    "test_ray_shutdown.py",
+    # "test_ray_shutdown.py",
     "test_unhandled_error.py",
     "test_top_level_api.py",
     "test_list_actors.py",
@@ -199,10 +203,10 @@ py_test_module_list(
     "test_autoscaler.py",
     "test_autoscaler_drain_node_api.py",
     "test_autoscaler_gcp.py",
-    "test_autoscaler_yaml.py",
+    # "test_autoscaler_yaml.py",
     "test_cli_logger.py",
     "test_client_metadata.py",
-    "test_client_terminate.py",
+    # "test_client_terminate.py",
     "test_command_runner.py",
     "test_coordinator_server.py",
     "test_k8s_operator_unit_tests.py",
