added single node failure tolerance test

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -1902,7 +1902,7 @@
     cluster_compute: tpl_cpu_1.yaml
 
   run:
-    timeout: 1200
+    timeout: 86400
     prepare: ray stop
     script: python workloads/node_failures.py
     long_running: true
@@ -2632,7 +2632,34 @@
 
   alert: default
 
-- name: long_running_rllib_node_failure_tolerance
+- name: long_running_rllib_kill_node_tolerance
+  group: Long running tests
+  working_dir: long_running_distributed_tests
+
+  legacy:
+    test_name: long_running_rllib_kill_node_tolerance
+    test_suite: long_running_distributed
+
+  frequency: nightly
+  team: ml
+  env: staging
+  cluster:
+    cluster_env: app_config.yaml
+    cluster_compute: tpl_cpu_3.yaml
+
+  run:
+    timeout: 1200
+    script: python workloads/long_running_rllib_kill_node_tolerance.py
+    long_running: true
+    wait_for_nodes:
+      num_nodes: 3
+
+    type: sdk_command
+    file_manager: sdk
+
+  alert: default
+
+- name: long_running_rllib_node_failure_recovery
   group: Long running tests
   working_dir: long_running_distributed_tests
 
@@ -2648,8 +2675,8 @@
     cluster_compute: tpl_cpu_3.yaml
 
   run:
-    timeout: 5400
-    script: python workloads/test_node_failure_tolerance.py
+    timeout: 1200
+    script: python workloads/long_running_rllib_kill_node_tolerance.py
     long_running: true
     wait_for_nodes:
       num_nodes: 3
