--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2837,6 +2837,40 @@
       timeout: 3600
       script: python stress_tests/test_state_api_scale.py --smoke-test
 
+
+- name: shuffle_100gb_5000_partitions_with_state_api
+  group: core-daily-test
+  working_dir: nightly_tests
+  legacy:
+    test_name: shuffle_100gb_5000_partitions_with_state_api
+    test_suite: nightly_tests
+  stable: false
+
+  frequency: nightly
+  team: core
+  cluster:
+    cluster_env: shuffle/shuffle_app_config.yaml
+    cluster_compute: shuffle/shuffle_compute_large_scale.yaml
+
+  run:
+    timeout: 3600
+    script: python stress_tests/test_shuffle_with_state_api.py --num-partitions=5000 --partition-size=20e6
+    wait_for_nodes:
+      num_nodes: 20
+
+    type: sdk_command
+    file_manager: sdk
+
+  smoke_test:
+    frequency: multi
+    cluster:
+      app_config: stress_tests/stress_tests_app_config.yaml
+      cluster_compute: stress_tests/smoke_test_compute.yaml
+
+    run:
+      timeout: 3600
+      script: python stress_tests/test_shuffle_with_state_api.py --smoke-test
+
 - name: stress_test_many_tasks
   group: core-daily-test
   working_dir: nightly_tests
