--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2638,9 +2638,9 @@
 
   legacy:
     test_name: long_running_rllib_kill_node_tolerance
-    test_suite: long_running_distributed
+    test_suite: rllib_tests
 
-  frequency: nightly
+  frequency: weekly
   team: ml
   env: staging
   cluster:
@@ -2648,9 +2648,8 @@
     cluster_compute: tpl_cpu_3.yaml
 
   run:
-    timeout: 1200
+    timeout: 18000
     script: python workloads/long_running_rllib_kill_node_tolerance.py
-    long_running: true
     wait_for_nodes:
       num_nodes: 3
 
@@ -2659,32 +2658,6 @@
 
   alert: default
 
-- name: long_running_rllib_node_failure_recovery
-  group: Long running tests
-  working_dir: long_running_distributed_tests
-
-  legacy:
-    test_name: long_running_rllib_node_failure_tolerance
-    test_suite: long_running_distributed
-
-  frequency: nightly
-  team: ml
-  env: staging
-  cluster:
-    cluster_env: app_config.yaml
-    cluster_compute: tpl_cpu_3.yaml
-
-  run:
-    timeout: 1200
-    script: python workloads/long_running_rllib_node_failure_recovery.py
-    long_running: true
-    wait_for_nodes:
-      num_nodes: 3
-
-    type: sdk_command
-    file_manager: sdk
-
-  alert: default
 
 ########################
 # Core Nightly Tests
