--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -252,6 +252,7 @@ parts:
       - file: cluster/deploy
       - file: cluster/api
       - file: cluster/usage-stats
+      - file: cluster/node-provider
 
   - caption: References
     chapters:
