--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -368,7 +368,7 @@
 
   run:
     timeout: 3600
-    script: python workloads/tune_torch_benchmark.py --num-trials 8 --num-workers 4
+    script: python workloads/tune_torch_benchmark.py --num-runs 3 --num-trials 8 --num-workers 4
 
     wait_for_nodes:
       num_nodes: 8
@@ -392,7 +392,7 @@
 
   run:
     timeout: 3600
-    script: python workloads/tune_torch_benchmark.py --num-trials 4 --num-workers 4 --use-gpu
+    script: python workloads/tune_torch_benchmark.py --num-runs 2 --num-trials 4 --num-workers 4 --use-gpu
 
     wait_for_nodes:
       num_nodes: 4
