Use compress observations where replay buffers and image obs are used in tuned examples
Signed-off-by: avnish <avnish@anyscale.com>

--- a/rllib/tuned_examples/apex_dqn/atari-apex-dqn.yaml
+++ b/rllib/tuned_examples/apex_dqn/atari-apex-dqn.yaml
@@ -28,3 +28,6 @@ apex-breakoutnoframeskip-v4:
         train_batch_size: 512
         target_network_update_freq: 50000
         min_sample_timesteps_per_iteration: 25000
+        # we should set this because few machines would be able to contain
+        # the replay buffers in memory otherwise
+        compress_observations: True
