--- a/rllib/tuned_examples/dqn/pong-rainbow.yaml
+++ b/rllib/tuned_examples/dqn/pong-rainbow.yaml
@@ -26,3 +26,6 @@ pong-deterministic-rainbow:
           grayscale: True
           zero_mean: False
           dim: 42
+        # we should set this because few machines would be able to contain
+        # the replay buffers in memory otherwise
+        compress_observations: True
