--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -267,6 +267,79 @@ parts:
       - file: cluster/api
       - file: cluster/usage-stats
 
+  - caption: Ray Clusters 2
+    chapters:
+      - file: cluster2/quickstart
+      - file: cluster2/key-concepts/key-concepts
+        sections:
+          - file: cluster2/key-concepts/overview
+          - file: cluster2/key-concepts/high-level-architecture
+          - file: cluster2/key-concepts/jobs
+          - file: cluster2/key-concepts/nodes-vs-workers
+          - file: cluster2/key-concepts/scheduling-and-autoscaling
+          - file: cluster2/key-concepts/configuration
+          - file: cluster2/key-concepts/things-to-know
+      - file: cluster2/user-guides/user-guides
+        sections:
+        - file: cluster2/user-guides/installing-ray
+        - file: cluster2/user-guides/launching-ray-cluster-on-k8s/launching-ray-cluster-on-k8s
+          sections:
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/deploy-and-interact-with-your-cluster
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/using-ray-operator
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/crds
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/networking
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/deploy-on-aws
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/deploy-on-azure
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/deploy-on-gcp
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/set-up-gpus
+          - file: cluster2/user-guides/launching-ray-cluster-on-k8s/run-workloads
+        - file: cluster2/user-guides/launching-ray-cluster-on-cloud-vms/launching-ray-cluster-on-cloud-vms
+          sections:
+          - file: cluster2/user-guides/launching-ray-cluster-on-cloud-vms/aws.md
+          - file: cluster2/user-guides/launching-ray-cluster-on-cloud-vms/azure.md
+          - file: cluster2/user-guides/launching-ray-cluster-on-cloud-vms/gcp.md
+          - file: cluster2/user-guides/launching-ray-cluster-on-cloud-vms/add-your-own-cloud-provider.md
+        - file: cluster2/user-guides/running-ray-cluster-on-prem
+        - file: cluster2/user-guides/running-jobs/running-jobs
+          sections:
+          - file: cluster2/user-guides/running-jobs/job-submission-cli
+          - file: cluster2/user-guides/running-jobs/job-submission-sdk
+          - file: cluster2/user-guides/running-jobs/job-submission-rest
+          - file: cluster2/user-guides/running-jobs/ray-client
+        - file: cluster2/user-guides/monitoring-and-observing-ray-cluster
+        - file: cluster2/user-guides/manual-cluster-setup
+        - file: cluster2/user-guides/large-cluster-best-practices
+        - file: cluster2/user-guides/multi-tenancy-best-practices
+        - file: cluster2/user-guides/configuring-autoscaling
+        - file: cluster2/user-guides/community-supported-cluster-manager/using-a-community-supported-cluster-manager
+          sections:
+          - file: cluster2/user-guides/community-supported-cluster-manager/yarn
+          - file: cluster2/user-guides/community-supported-cluster-manager/slurm
+          - file: cluster2/user-guides/community-supported-cluster-manager/lsf
+      - file: cluster2/tutorials/tutorials
+        sections:
+          - file: cluster2/tutorials/learn-ray-cluster-basics/learn-ray-cluster-basics
+            sections:
+              - file: cluster2/tutorials/learn-ray-cluster-basics/launching-ray-cluster-on-k8s
+              - file: cluster2/tutorials/learn-ray-cluster-basics/running-job-via-job-submission
+              - file: cluster2/tutorials/learn-ray-cluster-basics/scale-your-job-with-autoscaling
+              - file: cluster2/tutorials/learn-ray-cluster-basics/observe-your-app
+              - file: cluster2/tutorials/learn-ray-cluster-basics/shutting-down-your-ray-cluster
+          - file: cluster2/tutorials/running-autoscaling-program-on-ray-on-k8s/running-autoscaling-program-on-ray-on-k8s
+            sections:
+              - file: cluster2/tutorials/running-autoscaling-program-on-ray-on-k8s/running-a-rec-model
+          - file: cluster2/tutorials/setting-up-ray-cluster-for-development/setting-up-ray-cluster-for-development
+            sections:
+              - file: cluster2/tutorials/setting-up-ray-cluster-for-development/todo
+          - file: cluster2/tutorials/setting-up-ray-cluster-for-production/setting-up-ray-cluster-for-production
+            sections:
+              - file: cluster2/tutorials/setting-up-ray-cluster-for-production/todo
+      - file: cluster2/references/references
+        sections:
+          - file: cluster2/references/job-submission-apis
+          - file: cluster2/references/ray-cluster-configuration
+          - file: cluster2/references/ray-job-submission
+
   - caption: References
     chapters:
       - file: ray-references/api
@@ -283,5 +356,3 @@ parts:
       - file: ray-core/configure
       - file: ray-observability/index
       - file: ray-contribute/whitepaper
-
-# TODO: Add examples section
