--- a/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
+++ b/rllib/tuned_examples/crr/cartpole-v0-crr.yaml
@@ -36,7 +36,7 @@ cartpole_crr:
         evaluation_parallel_to_training: True
         # specific to CRR
         temperature: 1.0
-        weight_type: exp
+        weight_type: bin
         advantage_type: mean
         max_weight: 20.0
         n_action_sample: 4
