--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -179,6 +179,7 @@ parts:
                   - file: serve/deployment-graph/visualize_dag_during_development
                   - file: serve/deployment-graph/http_endpoint_for_dag_graph
               - file: serve/production
+              - file: serve/managing-java-deployments
           - file: serve/architecture
           - file: serve/tutorials/index
           - file: serve/faq
