--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -498,13 +498,15 @@
   team: ml
   env: staging
 
+  stable: false
+
   cluster:
     cluster_env: app_config.yaml
     cluster_compute: compute_gpu_4x4.yaml
 
   run:
     timeout: 3600
-    script: python workloads/tensorflow_benchmark.py run --num-runs 3 --num-epochs 120 --num-workers 16 --cpus-per-worker 4 --batch-size 1024 --use-gpu
+    script: python workloads/tensorflow_benchmark.py run --num-runs 3 --num-epochs 200 --num-workers 16 --cpus-per-worker 4 --batch-size 64 --use-gpu
 
     wait_for_nodes:
       num_nodes: 4
