too large nodes for all release tests

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2577,7 +2577,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2697,7 +2697,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2721,7 +2721,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2745,7 +2745,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2817,7 +2817,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2842,7 +2842,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
@@ -2891,7 +2891,7 @@
 
   cluster:
     cluster_env: app_config.yaml
-    cluster_compute: 1gpu_4cpus.yaml
+    cluster_compute: 2gpus_32cpus.yaml
 
   run:
     timeout: 18000
