--- a/python/requirements_ml_docker.txt
+++ b/python/requirements_ml_docker.txt
@@ -18,4 +18,4 @@ torch-geometric==2.0.4; python_version >= '3.7'
 
 # Jax
 -f https://storage.googleapis.com/jax-releases/jax_releases.html
-jax[cuda]
+jax[cuda111]==0.2.17
