--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -818,6 +818,7 @@ cc_library(
         "@com_google_absl//absl/container:btree",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
+        "@com_github_grpc_grpc//:grpcpp_admin",
         "@nlohmann_json",
     ],
 )
