--- a/python/requirements/ml/requirements_dl.txt
+++ b/python/requirements/ml/requirements_dl.txt
@@ -13,3 +13,9 @@ torchvision==0.10.0;sys_platform=="darwin"
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.9.0+cpu;sys_platform!="darwin"
 torchvision==0.10.0+cpu;sys_platform!="darwin"
+
+# If you make changes to the torch or tensorflow versions update, please also make the corresponding changes to `jax` related packages!
+# If you make changes to the jax versions, please also make the corresponding changes to `requirements_ml_docker.txt`!
+jax[cpu]==0.2.17
+flax==0.3.5
+einops==0.4.1
