[rllib][release] mark long_running_many_ppo as unstable

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -1927,6 +1927,8 @@
     test_name: many_ppo
     test_suite: long_running_tests
 
+  stable: false
+
   frequency: nightly
   team: ml
   env: staging
